@@ -1,3 +1,7 @@
+Sat Aug 19 19:24:00 BST 2000 Olly Betts
+
+	* nettest now guesses srcdir like apitest does.
+
 Sat Aug 19 18:39:00 BST 2000 Olly Betts
 
 	* Added testcase for handling of multiple postings of a term at the
